<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_notes"
            android:icon="@drawable/ic_menu_camera"
            android:title="Notes" />
        <item
            android:id="@+id/nav_courses"
            android:icon="@drawable/ic_menu_gallery"
            android:title="Courses" />
        <item
            android:id="@+id/nav_recent_notes"
            android:icon="@drawable/ic_visibility_black_24dp"
            android:title="Recently Viewed Notes" />
    </group>

    <item android:title="Communicate">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@android:drawable/ic_menu_share"
                android:title="@string/nav_share_message" />
            <item
                android:id="@+id/nav_send"
                android:icon="@android:drawable/ic_menu_send"
                android:title="@string/nav_send_message" />
            <item
                android:id="@+id/nav_count"
                android:icon="@android:drawable/ic_menu_help"
                android:title="@string/nav_count_message" />
        </menu>
    </item>
</menu>